# biometric_auth_pydantic_ai

./: .gitignore  main.py  pyproject.toml
src/biometric_auth_pydantic_ai/: agents.py  controller.py  executors.py  factory.py  main.py  models.py  router.py  services.py  types.py  utils.py
src/biometric_auth_pydantic_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
