[project]
name = "biometric-auth-pydantic-ai"
version = "0.1.0"
description = "Biometric auth agentic system with Pydantic-AI + Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.10",
    "pydantic-ai-slim[google]>=1.0.10",
]

[tool.uv]
package = true
